--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "all": "concurrently \"(npm run server --prefix server/ )\" \"(npm run start --prefix client/)\""
   },
   "repository": {
-    "all": "concurrently \"(npm run server --prefix server/ )\" \"(npm run start --prefix client/)\"",
     "type": "git",
     "url": "git+https://github.com/KosSid/boring_weekend_project.git"
   },
